dist/LineScript-win64-20260616/tests/cases/compile_fail/mod_zero_const.lsc
main() -> i64 do
  declare x = 10 % 0
  return x
end
